webkit: add support for dey-image-webkit for ccmp15 platform
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/sdk/config/ccmp15-dvk/bblayers.conf.sample
+++ b/sdk/config/ccmp15-dvk/bblayers.conf.sample
@@ -15,6 +15,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-openembedded/meta-webserver \
   ##DIGIBASE##/meta-qt5 \
   ##DIGIBASE##/meta-swupdate \
+  ##DIGIBASE##/meta-webkit \
   ##DIGIBASE##/meta-timesys \
   ##DIGIBASE##/meta-st-stm32mp \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
