crank: add new crank image
https://onedigi.atlassian.net/browse/DEL-7969

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -35,6 +35,7 @@ RECOVERY_INITRAMFS_IMAGE ?= "dey-image-recovery-initramfs"
 # DEY image features (alphabetical order)
 FEATURE_PACKAGES_dey-audio = "packagegroup-dey-audio"
 FEATURE_PACKAGES_dey-bluetooth = "packagegroup-dey-bluetooth"
+FEATURE_PACKAGES_dey-crank = "packagegroup-dey-crank"
 FEATURE_PACKAGES_dey-debug = "packagegroup-dey-debug"
 FEATURE_PACKAGES_dey-examples = "packagegroup-dey-examples"
 FEATURE_PACKAGES_dey-gstreamer = "packagegroup-dey-gstreamer"
