meta-digi-arm: support wolfssl dynamic layer
https://onedigi.atlassian.net/browse/DEL-8036

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -14,6 +14,8 @@ BBFILES_DYNAMIC += " \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
     stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bb \
     stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bbappend \
+    wolfssl:${LAYERDIR}/dynamic-layers/wolfssl/*/*/*.bb \
+    wolfssl:${LAYERDIR}/dynamic-layers/wolfssl/*/*/*.bbappend \
 "
 
 LAYERDEPENDS_digi-arm = "core"
