--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -14,15 +14,33 @@ DEFAULTTUNE = "cortexa7thf-neon-vfpv4"
 MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:ccmp1:ccmp15:ccmp15-dvk"
 
 # =========================================================================
+# boot device
+# =========================================================================
+# Configure the list of boards that enable NAND
+DEVICE_BOARD_ENABLE:NAND   += "ccmp15-dvk"
+
+# =========================================================================
 # U-Boot configs
 # =========================================================================
-UBOOT_CONFIG = "ccmp15_trusted_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+# Last one is the default (the one the symlinks point at)
+UBOOT_CONFIG = "ccmp15_dvk"
+UBOOT_CONFIG[ccmp15_dvk] = "ccmp15_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+
+# Platform U-Boot settings
+UBOOT_DTB_NAME = "ccmp15-dvk.dtb"
+UBOOT_PREFIX = "u-boot"
+UBOOT_SUFFIX = "bin"
+UBOOT_HAS_FASTBOOT = "false"
+
+# Set U-Boot FIP settings
+FIP_UBOOT_DTB = "u-boot"
+FIP_UBOOT_CONFIG = "optee"
 
 # =========================================================================
 # Machine settings
 # =========================================================================
 # Define list of devicetree per board
-
+STM32MP_DEVICETREE ??= "ccmp15-dvk"
 # Extra DTB for board - need to specify it with .dtb ...
 STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += "ccmp157-dvk.dtb"
 STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += "ccmp151-dvk.dtb"
@@ -66,9 +84,22 @@ ST_TOOLS_FOR_SDK:remove = "nativesdk-gcc-arm-none-eabi"
 # As example, modify the default boot config for each target to M4 config
 
 # =========================================================================
-# Trusted firmware debug
+# Debug trace
 # =========================================================================
-TF_DEBUG ?= "0"
+# activate/deactivate the debug and trace on boot stage
+ST_DEBUG_TRACE = "0"
+
+# =========================================================================
+# trusted-firmware-a
+# =========================================================================
+# Configure trusted-firmware-a build
+TF_A_CONFIG = "optee nand usb"
+
+# =========================================================================
+# optee
+# =========================================================================
+# Map OPTEE configuration to device tree list
+OPTEE_CONF = "ccmp15-dvk"
 
 # =========================================================================
 # Flashlayouts
