ccmp1: explicitly set VIRTUAL-RUNTIME_initscripts to "initscripts"
Explicitly set this variable to keep some necessary scripts in /etc/init.d and
set a "softer" assignment to allow override it.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -174,8 +174,8 @@ DISTRO_FEATURES:append = "pulseaudio"
 # Disabling sysvinit
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 
-VIRTUAL-RUNTIME_init_manager = "systemd"
-VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+VIRTUAL-RUNTIME_init_manager ?= "systemd"
+VIRTUAL-RUNTIME_initscripts ?= "initscripts"
 
 # Disable use of vendorfs partition
 ST_VENDORFS = "0"
