core-image-base: remove splash package for CCMP13 platform
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -139,6 +139,9 @@ MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 8191"
 # Wireless external module
 HAS_WIFI_VIRTWLANS = "true"
 
+# Set this platform without graphical support
+IS_HEADLESS = "true"
+
 # Remove additional bluetooth packages
 MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
 
