dey: update dey.conf with latest changes in poky.conf
Also clean some dead code: libjpeg-turbo is the only jpeg implementation
in poky since long ago. Also "remove-libtool" is enabled by default in
bitbake so there is no need to do it in our distro configuration.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -50,12 +50,6 @@ FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 # 5.65 version should be used, which is provided by the poky layer.
 PREFERRED_VERSION_bluez5 ?= "5.65"
 
-# Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
-# architecture.  For armv7a devices libjpeg-turbo should be used to take
-# advantage of the SIMD instructions.
-PREFERRED_PROVIDER_jpeg ?= "jpeg"
-PREFERRED_PROVIDER_jpeg:armv7a ?= "libjpeg-turbo"
-
 PREFERRED_VERSION_linux-yocto ?= "5.15%"
 PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
 
@@ -73,8 +67,8 @@ PREFERRED_PROVIDER_virtual/wpebackend = "wpebackend-fdo"
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 
-DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
-DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
+DISTRO_EXTRA_RDEPENDS += "${POKY_DEFAULT_EXTRA_RDEPENDS}"
+DISTRO_EXTRA_RRECOMMENDS += "${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 
 TCLIBCAPPEND = ""
 
@@ -88,6 +82,7 @@ SANITY_TESTED_DISTROS ?= " \
             ubuntu-18.04 \n \
             ubuntu-20.04 \n \
             ubuntu-21.10 \n \
+            ubuntu-22.04 \n \
             fedora-34 \n \
             fedora-35 \n \
             centos-7 \n \
@@ -115,6 +110,3 @@ INHERIT += "uninative"
 
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
-
-# Enable removal of libtool '*.la' files (this is the default starting in 2.3)
-INHERIT += "remove-libtool"
