ccmp1: add support to DT overlays for ccmp1 platforms
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -45,7 +45,14 @@ FIP_UBOOT_CONFIG = "optee"
 # Define list of devicetree per board
 STM32MP_DEVICETREE ??= "ccmp13-dvk"
 # Extra DTB for board - need to specify it with .dtb ...
-STM32MP_KERNEL_DEVICETREE:ccmp13-dvk += "ccmp133-dvk.dtb"
+STM32MP_KERNEL_DEVICETREE:ccmp13-dvk += " \
+    ccmp133-dvk.dtb \
+    _ov_board_microe-accel2-click_ccmp13.dtbo \
+    _ov_board_microe-gyro-click_ccmp13.dtbo \
+    _ov_board_microe-i2c-2-spi_ccmp13.dtbo \
+    _ov_som_bt_ccmp13.dtbo \
+    _ov_som_wifi_ccmp13.dtbo \
+"
 
 # =========================================================================
 # Machine features
