--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -45,8 +45,20 @@ FIP_UBOOT_CONFIG = "optee"
 # Define list of devicetree per board
 STM32MP_DEVICETREE ??= "ccmp15-dvk"
 # Extra DTB for board - need to specify it with .dtb ...
-STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += "ccmp157-dvk.dtb"
-STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += "ccmp151-dvk.dtb"
+STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
+    ccmp151-dvk.dtb \
+    ccmp157-dvk.dtb \
+    _ov_board_can2_ccmp15-dvk.dtbo \
+    _ov_board_eth0-10-100_ccmp15-dvk.dtbo \
+    _ov_board_fusion10-parallel_ccmp15-dvk.dtbo \
+    _ov_board_fusion7-parallel_ccmp15-dvk.dtbo \
+    _ov_board_g101evn010-lvds_ccmp15-dvk.dtbo \
+    _ov_board_microe-accel2-click_ccmp15.dtbo \
+    _ov_board_microe-gyro-click_ccmp15.dtbo \
+    _ov_board_microe-i2c-2-spi_ccmp15.dtbo \
+    _ov_som_bt_ccmp15.dtbo \
+    _ov_som_wifi_ccmp15.dtbo \
+"
 
 # =========================================================================
 # Machine features
