--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -25,6 +25,8 @@ LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-laye
 
 LAYERSERIES_COMPAT_digi-dey = "kirkstone"
 
+META_DIGI_SCRIPTS = "${LAYERDIR}/../scripts"
+
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
