ccmp15-dvk: add CAN1 overlay
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -48,6 +48,7 @@ STM32MP_DEVICETREE ??= "ccmp15-dvk"
 STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     ccmp151-dvk.dtb \
     ccmp157-dvk.dtb \
+    _ov_board_can1_ccmp15-dvk.dtbo \
     _ov_board_can2_ccmp15-dvk.dtbo \
     _ov_board_eth0-10-100_ccmp15-dvk.dtbo \
     _ov_board_fusion10-lvds_ccmp15-dvk.dtbo \
