--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -12,10 +12,11 @@ UBOOT_CONFIG[ccimx6ulstarter1GB] = "ccimx6ulstarter1GB_defconfig,,u-boot-dtb.${U
 UBOOT_CONFIG[ccimx6ulstarter512MB] = "ccimx6ulstarter512MB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 UBOOT_CONFIG[ccimx6ulstarter] = "ccimx6ulstarter_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
-# U-Boot environment offset (within partition)
-UBOOT_ENV_OFFSET ?= "0x0"
 # U-Boot environment size
 UBOOT_ENV_SIZE ?= "0x20000"
+# U-Boot environment offset (within partition)
+UBOOT_ENV_OFFSET ?= "0x0"
+UBOOT_ENV_REDUND_OFFSET ?= "${UBOOT_ENV_SIZE}"
 # U-Boot environment range: size (in hex) in the environment partition that
 # the U-Boot environment can take up (if undefined, it will take up all the
 # available space in the environment partition)
