--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -136,6 +136,7 @@ IMAGE_CLASSES = "image_types_digi image_types-stubi"
 
 # U-Boot environment offset (within partition)
 UBOOT_ENV_OFFSET ?= "0x0"
+UBOOT_ENV_REDUND_OFFSET ?= "0x0"
 # U-Boot environment size
 UBOOT_ENV_SIZE ?= "0x20000"
 # U-Boot environment range: size (in hex) in the environment partition that
