meta-digi-dey: crank-demos: fix crank demo for CCMP15
Crank demo was not working on CCMP15 devices due to several changes on weston
service and the user launching it. This commit makes several fixes to make
the demo to work again:

- Add 'DEMO_USER' parameter to determine which user will launch the demo. Update
  recipe and start script accordingly.
- Add 'DEMO_DISPLAY' parameter to determine the display that will be used to
  launch the demo. Update recipe and start script accordingly.
- Parameterize the name of the Weston service after which the demo must be started.
  Update recipe and service file accordingly.
- Give Crank engine read and execution permissions so the engine can be started
  by any user.
- Add new method to the demo start script to wait until Wayland is fully setup
  before actually starting the demo.

Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-dey/recipes-crank/crank-demos/crank-demos/crank-demo.service
+++ b/meta-digi-dey/recipes-crank/crank-demos/crank-demos/crank-demo.service
@@ -3,7 +3,7 @@ Description=Crank Software demo
 Documentation=https://www.cranksoftware.com/
 
 # Make sure we are started after graphic service is available
-After=weston@root.service
+After=##WESTON_SERVICE##
 
 [Service]
 Type=forking
