ccmp1: define DIGI_FAMILY variable
DIGI_FAMILY is "ccmp1" and is common to both CCMP15 and CCMP13.

Signed-off-by: Gonzalo Ruiz <Gonzalo.Ruiz@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -10,7 +10,7 @@ include conf/machine/include/ccmp1.inc
 # Chip architecture
 # =========================================================================
 DEFAULTTUNE = "cortexa7thf-neon-vfpv4"
-MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:ccmp1:ccmp13:ccmp13-dvk"
+MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAMILY}:ccmp13:ccmp13-dvk"
 
 # =========================================================================
 # boot device
