--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -10,7 +10,7 @@ include conf/machine/include/ccmp1.inc
 # Chip architecture
 # =========================================================================
 DEFAULTTUNE = "cortexa7thf-neon-vfpv4"
-MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:ccmp1:ccmp15:ccmp15-dvk"
+MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAMILY}:ccmp15:ccmp15-dvk"
 
 # =========================================================================
 # boot device
