meta-digi-arm: ccmp1: add uuu  script to installer
Set 'UBOOT_HAS_FASTBOOT=true' on CCMP1 platforms and therefore add the
UUU installation script to the installer ZIP file.

Signed-off-by: Gonzalo Ruiz <Gonzalo.Ruiz@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -33,7 +33,7 @@ UBOOT_CONFIG[ccmp15_dvk] = "ccmp15_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 UBOOT_DTB_NAME = "ccmp15-dvk.dtb"
 UBOOT_PREFIX = "u-boot"
 UBOOT_SUFFIX = "bin"
-UBOOT_HAS_FASTBOOT = "false"
+UBOOT_HAS_FASTBOOT = "true"
 
 # Set U-Boot FIP settings
 FIP_UBOOT_DTB = "u-boot"
