--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -33,7 +33,7 @@ UBOOT_CONFIG[ccmp13_dvk] = "ccmp13_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 UBOOT_DTB_NAME = "ccmp13-dvk.dtb"
 UBOOT_PREFIX = "u-boot"
 UBOOT_SUFFIX = "bin"
-UBOOT_HAS_FASTBOOT = "false"
+UBOOT_HAS_FASTBOOT = "true"
 
 # Set U-Boot FIP settings
 FIP_UBOOT_DTB = "u-boot"
