libdigiapix: ccimx6ulsbc: update user button GPIO
Cloud Connector opens USER_BUTTON GPIO as an interrupt to listen for rising and
falling edge events and upload them to Remote Manager as data point values.
Having MCA_IO1 as user button and opened by the Cloud Connector (or any other
software) prevents the device to go to sleep when it is not connected (all
MCA GPIOs are wake-up sources when configured as interrupt)

https://onedigi.atlassian.net/browse/DEL-8155

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulsbc/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx6ulsbc/libdigiapix.conf
@@ -7,7 +7,7 @@ model = Digi International ConnectCore 6UL SBC.
 USER_LED = ioexp-gpio,23
 
 # USER BUTTON
-USER_BUTTON = mca-gpio,1
+USER_BUTTON = gpio1,3
 
 [I2C]
 
