--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccmp15-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccmp15-dvk/libdigiapix.conf
@@ -11,20 +11,20 @@ USER_BUTTON = GPIOA,13
 
 [I2C]
 
-# I2C-2 on I2C board connector.
-DEFAULT_I2C_BUS = 1
+# I2C-2 on MikroBus connector J31.
+DEFAULT_I2C_BUS = 6
 
 [SPI]
 
-# SPI-4 on SPI board connector.
-DEFAULT_SPI = 3,0
+# SPI-4 on MikroBus connector J30.
+DEFAULT_SPI = 0,0
 
 [PWM]
 
-# PWM4 on GPIO board connector (pin 11).
-# DEFAULT_PWM = 0,0
+# PWM4 on MikroBus connector J31 (pin 1).
+DEFAULT_PWM = 4,0
 
 [ADC]
 
-# ADC1_IN2 on GPIO board connector (pin 13)
-# DEFAULT_ADC = 0,2
+# ANA0 on GPIO board connector J41 (pin 4)
+DEFAULT_ADC = 1,0
