tfa: change arm-trusted-firmware build configuration to build only one artifact
This commit changes the arm-trusted-firmware build configuration to only build
one ATF artifact.
It will create an image that boot over USB and NAND.

https://onedigi.atlassian.net/browse/DEL-8187

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -97,7 +97,7 @@ ST_DEBUG_TRACE = "0"
 # trusted-firmware-a
 # =========================================================================
 # Configure trusted-firmware-a build
-TF_A_CONFIG = "optee nand usb"
+TF_A_CONFIG = "optee nand"
 
 # =========================================================================
 # optee
