--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -105,7 +105,7 @@ ST_DEBUG_TRACE = "0"
 # trusted-firmware-a
 # =========================================================================
 # Configure trusted-firmware-a build
-TF_A_CONFIG = "optee nand usb"
+TF_A_CONFIG = "optee nand"
 
 # =========================================================================
 # optee
