ccmp1: rename ccmp1 platforms on U-Boot to match with Linux
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -22,8 +22,8 @@ DEVICE_BOARD_ENABLE:NAND   += "ccmp13-dvk"
 # U-Boot configs
 # =========================================================================
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG = "ccmp13_dvk"
-UBOOT_CONFIG[ccmp13_dvk] = "ccmp13_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG = "ccmp13-dvk"
+UBOOT_CONFIG[ccmp13-dvk] = "ccmp13-dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 # Platform U-Boot settings
 UBOOT_DTB_NAME = "ccmp13-dvk.dtb"
