--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -22,8 +22,8 @@ DEVICE_BOARD_ENABLE:NAND   += "ccmp15-dvk"
 # U-Boot configs
 # =========================================================================
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG = "ccmp15_dvk"
-UBOOT_CONFIG[ccmp15_dvk] = "ccmp15_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+UBOOT_CONFIG = "ccmp15-dvk"
+UBOOT_CONFIG[ccmp15-dvk] = "ccmp15-dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
 # Platform U-Boot settings
 UBOOT_DTB_NAME = "ccmp15-dvk.dtb"
