update-firmware: rename the firmware-update from recovery-utils
There is a problem when building the SDK because two binaries
have the same name (update-firmware) and makes the compilation
to fail.

Change the name to update-firmware.recovery and create a wrapper
over the update-firmware to check if the system is not dual boot
to call it.

Rework the code to make it more reliable.

Remove the umount of the alternative linux partition, now it is
not needed because only the active linux partition is mounted now.

Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-dey/recipes-core/recovery/recovery-utils/recovery-utils/recovery-reboot/Makefile
+++ b/meta-digi-dey/recipes-core/recovery/recovery-utils/recovery-utils/recovery-reboot/Makefile
@@ -40,7 +40,7 @@ all: $(PROGRAM)
 install: $(PROGRAM)
 	install -d $(DESTDIR)/usr/bin
 	install -m 0755 $(PROGRAM) $(DESTDIR)/usr/bin/
-	ln -sf $(PROGRAM) $(DESTDIR)/usr/bin/update-firmware
+	ln -sf $(PROGRAM) $(DESTDIR)/usr/bin/update-firmware.recovery
 	ln -sf $(PROGRAM) $(DESTDIR)/usr/bin/encrypt-partitions
 
 .PHONY: clean
