ccmp15/13_dvk: define default UART for XBee socket on DVK
Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://onedigi.atlassian.net/browse/DEL-8212

--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -148,6 +148,10 @@ IS_HEADLESS = "true"
 # Remove additional bluetooth packages
 MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
 
+# XBee
+XBEE_RESET_N_GPIO ?= "GPIOG@15"
+XBEE_TTY ?= "ttySTM2"
+
 # =========================================================================
 # alsa
 # =========================================================================
