--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -154,6 +154,10 @@ HAS_WIFI_VIRTWLANS = "true"
 # Remove additional bluetooth packages
 MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
 
+# XBee
+XBEE_RESET_N_GPIO ?= "GPIOZ@2"
+XBEE_TTY ?= "ttySTM2"
+
 # =========================================================================
 # alsa
 # =========================================================================
