ccmp13: dey-examples: update the configuration file for ccmp13
Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccmp13-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccmp13-dvk/libdigiapix.conf
@@ -3,28 +3,28 @@ model = Digi International ConnectCore MP13 DVK.
 
 [GPIO]
 
-# USER LED (ULED)
+# USER LED (ULED).
 USER_LED = GPIOG,0
 
-# USER BUTTON (USER_1)
+# USER BUTTON (USER_1).
 USER_BUTTON = GPIOA,13
 
 [I2C]
 
-# I2C-2 on I2C board connector.
-DEFAULT_I2C_BUS = 1
+# I2C-2 on MikroBus connector J31.
+DEFAULT_I2C_BUS = 0
 
 [SPI]
 
-# SPI-5 on SPI board connector.
-DEFAULT_SPI = 4,0
+# SPI-4 on MikroBus connector J31.
+DEFAULT_SPI = 0,0
 
 [PWM]
 
-# PWM4 on GPIO board connector (pin 11).
-# DEFAULT_PWM = 0,0
+# PWM2 on MikroBus connector J31 (pin 1). Set overlay _ov_board_mikroe-pwm_ccmp13-dvk.dtbo
+DEFAULT_PWM = 0,0
 
 [ADC]
 
-# ADC1_IN2 on GPIO board connector (pin 13)
-# DEFAULT_ADC = 0,2
+# ADC0_IN2 on MikroBus connector J31 (pin 1).
+ DEFAULT_ADC = 0,2
