--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -21,6 +21,7 @@ SPL_BINARY = "spl/u-boot-spl.bin"
 UBOOT_DTB_NAME = "ccimx8mn-dvk.dtb"
 
 ATF_PLATFORM = "imx8mn"
+IMX_BOOT_SOC_TARGET = "iMX8MN"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8mn-dvk.dtb \
