--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -12,9 +12,11 @@ BOOTLOADER_SEEK_USERDATA = "33"
 BOOTLOADER_SEEK_BOOT = "0"
 
 # U-Boot configurations
-# Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx8mm_dvk"
-UBOOT_CONFIG[ccimx8mm_dvk] = "ccimx8mm_dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
+#
+# At the moment config label should be "machine" because SDIMG_BOOTLOADER
+# expects a boot artifact named after machine to create the sdcard image.
+UBOOT_CONFIG ??= "ccimx8mm-dvk"
+UBOOT_CONFIG[ccimx8mm-dvk] = "ccimx8mm_dvk_defconfig"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 # Set u-boot DTB
