connectcore-demo-example: fix start of service
Change the condition to start after the weston service.
While on it, add a "requires" option given that weston is mandatory to have
the "cog" tool running.

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/dynamic-layers/webkit/recipes-digi/connectcore-demo-example-webkit/connectcore-demo-example-webkit/connectcore-demo-example.service
+++ b/meta-digi-dey/dynamic-layers/webkit/recipes-digi/connectcore-demo-example-webkit/connectcore-demo-example-webkit/connectcore-demo-example.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Initialization of the ConnectCore demo example
-After=weston@root.service busybox-httpd.service
+After=weston.service busybox-httpd.service
+Requires=weston.service
 
 [Service]
 Type=forking
