recovery-initramfs: add script and mdev rule for UBI volumes
On systems with a single MTD system partition and multiple UBI
volumes, the initramdisk doesn't mount the 'update' partition
because mdev rules only trigger events for MTD partitions.

This commit adds a rule to trigger an event for every /dev/ubi0_x
(every UBI volume on ubi0 device) and call the new automount_ubi.sh
script. The script checks if the volume is called 'update' and if
so, it creates /mnt/update mountpoint and mounts the volume.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://onedigi.atlassian.net/browse/DEL-8297
(cherry picked from commit df9c622b1bf0a7307c61deda12cf1f67d4f630f0)

--- a/meta-digi-dey/recipes-core/recovery/recovery-initramfs/mdev.conf
+++ b/meta-digi-dey/recipes-core/recovery/recovery-initramfs/mdev.conf
@@ -2,3 +2,4 @@
 sd[a-z][0-9]+		0:0	660 */lib/mdev/automount_block.sh
 mmcblk[0-9]+p[0-9]+	0:0	660 */lib/mdev/automount_block.sh
 mtd[0-9]+		0:0	660 */lib/mdev/automount_mtd.sh
+ubi0_[0-9]+		0:0	660 */lib/mdev/automount_ubi.sh
