dey-image-installer: remove boot-artifacts.bbclass
The class 'boot-artifacts.bbclass' was created to generate a
list of the bootable artifacts that must be copied from the
deploy dir to the installer ZIP file, so that the installer
has all the possible bootloader files to update any variant
of the hardware.
The class was somewhat over-engineered to produce the list,
specially for the cc8x, with the variants of SoC revision,
RAM size and width. With the arrival of ST family, it got
more complex, as the artifacts don't even come from U-Boot
recipe.

To remove complexity, this commit removes the bbclass and
moves the list to the platform config file.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -49,3 +49,12 @@ XBEE_TTY ?= "ttymxc4"
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
 				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    u-boot-ccimx6dlsbc512MB.imx \
+    u-boot-ccimx6dlsbc.imx \
+    u-boot-ccimx6qsbc2GB.imx \
+    u-boot-ccimx6qsbc512MB.imx \
+    u-boot-ccimx6qsbc.imx \
+"
