--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -34,3 +34,10 @@ XBEE_TTY ?= "ttymxc1"
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
 				       "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    u-boot-ccimx6ulsbc1GB.imx \
+    u-boot-ccimx6ulsbc512MB.imx \
+    u-boot-ccimx6ulsbc.imx \
+"
