--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -33,3 +33,10 @@ IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "core-image-base"
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    u-boot-ccimx6ulstarter1GB.imx \
+    u-boot-ccimx6ulstarter512MB.imx \
+    u-boot-ccimx6ulstarter.imx \
+"
