--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -52,3 +52,6 @@ XBEE_TTY ?= "ttymxc3"
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
 				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = "imx-boot-ccimx8mn-dvk.bin"
