--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -46,3 +46,15 @@ XBEE_TTY ?= "ttyMCA0"
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
 				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    imx-boot-ccimx8x-sbc-pro-B0-1GB_16bit.bin \
+    imx-boot-ccimx8x-sbc-pro-B0-1GB_32bit.bin \
+    imx-boot-ccimx8x-sbc-pro-B0-2GB_32bit.bin \
+    imx-boot-ccimx8x-sbc-pro-B0-512MB_16bit.bin \
+    imx-boot-ccimx8x-sbc-pro-C0-1GB_16bit.bin \
+    imx-boot-ccimx8x-sbc-pro-C0-1GB_32bit.bin \
+    imx-boot-ccimx8x-sbc-pro-C0-2GB_32bit.bin \
+    imx-boot-ccimx8x-sbc-pro-C0-512MB_16bit.bin \
+"
