--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -173,3 +173,9 @@ VIRTUAL-RUNTIME_initscripts ?= "initscripts"
 
 # Disable use of vendorfs partition
 ST_VENDORFS = "0"
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    arm-trusted-firmware/tf-a-ccmp13-dvk-nand.stm32 \
+    fip/fip-ccmp13-dvk-optee.bin \
+"
