--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -186,6 +186,12 @@ VIRTUAL-RUNTIME_initscripts ?= "initscripts"
 # Disable use of vendorfs partition
 ST_VENDORFS = "0"
 
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    arm-trusted-firmware/tf-a-ccmp15-dvk-nand.stm32 \
+    fip/fip-ccmp15-dvk-optee.bin \
+"
+
 # SWUpdate sw-description configuration
 BOOTFS_EXT ?= ".boot.ubifs"
 ROOTFS_EXT ?= ".ubifs"
