--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -47,3 +47,9 @@ XBEE_TTY ?= "ttymxc4"
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
 				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    u-boot-ccimx6qpsbc1GB.imx \
+    u-boot-ccimx6qpsbc2GB.imx \
+"
