crank-demo: fix autostarting app on top of weston
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/recipes-crank/crank-demos/crank-demos/crank-demo.service
+++ b/meta-digi-dey/recipes-crank/crank-demos/crank-demos/crank-demo.service
@@ -4,6 +4,7 @@ Documentation=https://www.cranksoftware.com/
 
 # Make sure we are started after graphic service is available
 After=##WESTON_SERVICE##
+Requires=##WESTON_SERVICE##
 
 [Service]
 Type=forking
