weston-init: add customizations for ccimx93
Update the recipe (using meta-imx's reference) to add support for the
ccimx93 and delete obsolete code.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/dynamic-layers/freescale-layer/recipes-graphics/wayland/weston-init/imx-nxp-bsp/weston.ini
+++ b/meta-digi-dey/dynamic-layers/freescale-layer/recipes-graphics/wayland/weston-init/imx-nxp-bsp/weston.ini
@@ -1,6 +1,5 @@
 [core]
 #gbm-format=argb8888
-#gbm-format=rgb565
 idle-time=0
 #use-g2d=1
 #xwayland=true
@@ -29,7 +28,7 @@ touchscreen_calibrator=true
 #transform=rotate-90
 
 [screen-share]
-command=/usr/bin/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize --rdp-tls-cert=/etc/freerdp/keys/server.crt --rdp-tls-key=/etc/freerdp/keys/server.key
+command=@bindir@/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize --rdp-tls-cert=/etc/freerdp/keys/server.crt --rdp-tls-key=/etc/freerdp/keys/server.key
 
 # Digi: Set custom background
 [shell]
