--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -13,6 +13,7 @@ KERNEL_DEVICETREE ?= " \
     digi/ccimx93-dvk.dtb \
     digi/_ov_board_lvds_ccimx93-dvk.dtbo \
     digi/_ov_som_bt_ccimx93.dtbo \
+    digi/_ov_som_mca_ccimx93.dtbo \
     digi/_ov_som_wifi_ccimx93.dtbo \
 "
 
