--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -32,3 +32,6 @@ WKS_FILE_DEPENDS:append = " imx-m33-demos"
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat recovery.vfat squashfs tar.bz2", \
 				       "boot.vfat recovery.vfat ext4.gz tar.bz2 sdcard.gz", d)}'
+
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = "imx-boot-ccimx93-dvk.bin"
