meta-digi-dey: make QT5 optional
Remove the 'qt5-layer' hardcoded dependence for 'digi-dey' and
dynamically get whether QT5 is being used in the project. This is done
with a new class _qt-version.bbclass_ that is able to get that
information from the project.

https://onedigi.atlassian.net/browse/DEL-8347

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -25,7 +25,7 @@ BBFILE_PATTERN_digi-dey := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-dey = "6"
 
 LAYERDEPENDS_digi-dey  = "core digi-arm"
-LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
+LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver swupdate"
 
 LAYERSERIES_COMPAT_digi-dey = "kirkstone"
 
