ccmp15: connectcore demo: fix autostart of demo application on top of weston
This commit is similar to those required to launch crank applications on top of
weston in ConnectCore MP 15 platform, it must wait for the socket
'/run/user/0/wayland-1' after weston is initialized.

See commits 7de8270beda64236cdd1c46857906315a37dc4fe and
1ec5cc172c728ab5d30dce3db730be2cdcc5a5a9.

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-dey/dynamic-layers/webkit/recipes-digi/connectcore-demo-example-webkit/connectcore-demo-example-webkit/connectcore-demo-example.service
+++ b/meta-digi-dey/dynamic-layers/webkit/recipes-digi/connectcore-demo-example-webkit/connectcore-demo-example-webkit/connectcore-demo-example.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=Initialization of the ConnectCore demo example
-After=weston.service busybox-httpd.service
-Requires=weston.service
+After=busybox-httpd.service
+
+# Make sure we are started after graphic service is available
+After=##WESTON_SERVICE##
+Requires=##WESTON_SERVICE##
 
 [Service]
 Type=forking
