--- a/meta-digi-dey/dynamic-layers/webkit/recipes-digi/connectcore-demo-example-webkit/connectcore-demo-example-webkit/connectcore-demo-example.service
+++ b/meta-digi-dey/dynamic-layers/webkit/recipes-digi/connectcore-demo-example-webkit/connectcore-demo-example-webkit/connectcore-demo-example.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Initialization of the ConnectCore demo example
-After=busybox-httpd.service
+After=connectcore-demo-server
 
 # Make sure we are started after graphic service is available
 After=##WESTON_SERVICE##
