networkmanager: ifupdown: add a setting to disable this feature
The 'ifupdown' script does not allow to disconnect a network interface on
purpose. Once it is down, the script will reconnect it again.

This commit adds a configuration section inside 'NetworkManager.conf' to be able
to manage this behavior. By default, it is disabled.

https://onedigi.atlassian.net/browse/DEL-8342

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-dey/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
+++ b/meta-digi-dey/recipes-connectivity/networkmanager/networkmanager/NetworkManager.conf
@@ -12,3 +12,6 @@ unmanaged-devices=interface-name:p2p*;interface-name:wlan1
 
 [device]
 wifi.scan-rand-mac-address=no
+
+[digi-recovery]
+ifdownup=false
