global: create DIGI_SOM variable and reformulate DIGI_FAMILY variable
Certain platforms share a processor family but need to be differentiated
between them. DEY was using the variable DIGI_FAMILY as the SOM name
rather than the family. It becomes useful to have both (DIGI_SOM as the
more specific, and DIGI_FAMILY as the more generic).

This is the case, for example, of:

- ccmp1 (family)
  - ccmp15 (SOM)
  - ccmp13 (SOM)
- ccimx8m (family)
  - ccimx8mm (SOM)
  - ccimx8mn (SOM)

Both variables are used on the machine overrides.
Where DIGI_FAMILY was used, use now DIGI_SOM.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -2,6 +2,8 @@
 #@NAME: ConnectCore 6 QuadPlus Single Board Computer.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore 6 QuadPlus SBC.
 
+DIGI_SOM = "ccimx6qp"
+
 # Include the machine configuration for Digi's ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
