--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -2,6 +2,8 @@
 #@NAME: ConnectCore 6 Single Board Computer.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore 6 SBC.
 
+DIGI_SOM = "ccimx6"
+
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
