--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -2,8 +2,8 @@
 #@NAME: ConnectCore 8M Mini Development Kit.
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore 8M Mini DVK.
 
-DIGI_FAMILY = "ccimx8mm"
-MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:ccimx8m:${DIGI_FAMILY}:"
+DIGI_SOM = "ccimx8mm"
+MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:${DIGI_FAMILY}:${DIGI_SOM}:"
 
 # Include the machine configuration for Digi's ConnectCore 8M module.
 include conf/machine/include/ccimx8m.inc
