--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -2,7 +2,12 @@
 #@NAME: ConnectCore 93 Development Kit
 #@DESCRIPTION: Machine configuration for Digi's ConnectCore 93 DVK
 
+DIGI_SOM = "ccimx93"
+
 require include/ccimx93.inc
+
+MACHINEOVERRIDES =. "${DIGI_FAMILY}:${DIGI_SOM}:"
+MACHINEOVERRIDES =. "mx93:"
 
 # U-Boot configurations
 UBOOT_CONFIG ??= "ccimx93-dvk"
