--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -6,11 +6,13 @@
 # Include the machine configuration for Digi's ConnectCore MP1.
 include conf/machine/include/ccmp1.inc
 
+DIGI_SOM = "ccmp13"
+
 # =========================================================================
 # Chip architecture
 # =========================================================================
 DEFAULTTUNE = "cortexa7thf-neon-vfpv4"
-MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAMILY}:ccmp13:ccmp13-dvk"
+MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAMILY}:${DIGI_SOM}:ccmp13-dvk"
 
 # =========================================================================
 # boot device
