ccimx93-dvk.conf: include WiFi and BT features support
https://onedigi.atlassian.net/browse/DEL-8346

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -17,8 +17,15 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_som_wifi_ccimx93.dtbo \
 "
 
-# Remove additional bluetooth packages
-MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
+# Wireless external module
+WIRELESS_MODULE ?= ""
+WIRELESS_MODULE:append = " ${@oe.utils.conditional('HAVE_WIFI', '1', 'kernel-module-nxp-wlan', '', d)}"
+HAS_WIFI_VIRTWLANS = "false"
+
+# Machine firmware
+MACHINE_FIRMWARE:append = " ${@oe.utils.conditional('HAVE_WIFI', '1', 'firmware-nxp-wifi-nxpiw612', '', d)}"
+
+MACHINE_EXTRA_RRECOMMENDS += "${WIRELESS_MODULE}"
 
 IMAGE_BOOT_FILES:append:use-nxp-bsp = " \
     imx93_m33_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin \
