ccmp15: set 'dey-image-webkit' as default image instead of 'dey-image-qt'
This commit also replaces 'dey-image-qt' with 'dey-image-webkit' on build
scripts.

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -74,6 +74,9 @@ IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
                                        "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
                                        "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
 
+# Default image for install scripts
+DEFAULT_IMAGE_NAME ?= "dey-image-webkit"
+
 # For populate_sdk, gcc-arm-none-eabi_9 has a python2 dependency, so we remove it.
 ST_TOOLS_FOR_SDK:remove = "nativesdk-gcc-arm-none-eabi"
 
