ccimx93: add xbee support
ConnectCore 93 DVK only connects the XBee reset line (XBEE_RESET_N_GPIO) but not
the sleep request (XBEE_SLEEP_RQ_GPIO)

It also reworks the 'xbee-init' script to support empty reset
(XBEE_RESET_N_GPIO) or sleep request (XBEE_SLEEP_RQ_GPIO) values.

https://onedigi.atlassian.net/browse/DEL-8375

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -26,6 +26,11 @@ IMAGE_BOOT_FILES:append:use-nxp-bsp = " \
 "
 WKS_FILE_DEPENDS:append = " imx-m33-demos"
 
+# XBee
+XBEE_RESET_N_GPIO ?= "gpio2@19"
+XBEE_SLEEP_RQ_GPIO ?= ""
+XBEE_TTY ?= "ttyLP3"
+
 # Image FS types
 IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 				       "boot.vfat recovery.vfat squashfs tar.bz2", \
