--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -39,6 +39,8 @@ STM32MP_KERNEL_DEVICETREE:ccmp13-dvk += " \
     _ov_board_mikroe-accel2-click_ccmp13-dvk.dtbo \
     _ov_board_mikroe-gyro-click_ccmp13-dvk.dtbo \
     _ov_board_mikroe-i2c-to-spi-click_ccmp13-dvk.dtbo \
+    _ov_board_pwm8_ccmp13-dvk.dtbo \
+    _ov_board_usart3_ccmp13-dvk.dtbo \
     _ov_som_bt_ccmp13.dtbo \
     _ov_som_wifi_ccmp13.dtbo \
 "
