dey.conf: include poky.conf to remove duplicated code
No functional change, just include poky.conf (which is the base for our
distro) and then remove all the code that is duplicated.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,23 +1,18 @@
+require conf/distro/poky.conf
+
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
 DISTRO_VERSION = "4.0-r1"
-DISTRO_CODENAME = "kirkstone"
+
 SDK_VENDOR = "-deysdk"
-SDK_VERSION := "${@d.getVar('DISTRO_VERSION')}"
-SDK_VERSION[vardepvalue] = "${SDK_VERSION}"
 
 MAINTAINER = "Digi Support <tech.support@digi.com>"
 
 TARGET_VENDOR = "-dey"
 
-LOCALCONF_VERSION = "2"
-
-# Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland bluez5 cellular"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
-
-DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
 # Removed DISTRO_FEATURES
 #   'wayland' -> only supported on the i.MX8 QXP
@@ -50,9 +45,6 @@ FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 # 5.65 version should be used, which is provided by the poky layer.
 PREFERRED_VERSION_bluez5 ?= "5.65"
 
-PREFERRED_VERSION_linux-yocto ?= "5.15%"
-PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
-
 # There's a generic opencl-headers recipe in the thud branch of
 # meta-openembedded, but we should use the package provided by the imx-gpu-viv
 # recipe in case there are NXP-specific changes in it
@@ -61,49 +53,7 @@ PREFERRED_PROVIDER_opencl-headers ?= "imx-gpu-viv"
 # Use the FDO backend for WPE WebKit
 PREFERRED_PROVIDER_virtual/wpebackend = "wpebackend-fdo"
 
-SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
-
-DISTRO_EXTRA_RDEPENDS += "${POKY_DEFAULT_EXTRA_RDEPENDS}"
-DISTRO_EXTRA_RRECOMMENDS += "${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
-
-TCLIBCAPPEND = ""
 
 # Some packages need this (e.g. gstreamer1.0-plugins-ugly)
 LICENSE_FLAGS_ACCEPTED += "commercial"
-
-SANITY_TESTED_DISTROS ?= " \
-            poky-3.3 \n \
-            poky-3.4 \n \
-            ubuntu-16.04 \n \
-            ubuntu-18.04 \n \
-            ubuntu-20.04 \n \
-            ubuntu-21.10 \n \
-            ubuntu-22.04 \n \
-            fedora-34 \n \
-            fedora-35 \n \
-            centos-7 \n \
-            centos-8 \n \
-            debian-9 \n \
-            debian-10 \n \
-            debian-11 \n \
-            opensuseleap-15.3 \n \
-            almalinux-8.5 \n \
-            "
-# add poky sanity bbclass
-INHERIT += "poky-sanity"
-
-# QA check settings - a little stricter than the OE-Core defaults
-# (none currently necessary as we now match OE-Core)
-#WARN_TO_ERROR_QA = "X"
-#WARN_QA:remove = "${WARN_TO_ERROR_QA}"
-#ERROR_QA:append = " ${WARN_TO_ERROR_QA}"
-
-require conf/distro/include/poky-world-exclude.inc
-require conf/distro/include/no-static-libs.inc
-require conf/distro/include/yocto-uninative.inc
-require conf/distro/include/security_flags.inc
-INHERIT += "uninative"
-
-BB_SIGNATURE_HANDLER ?= "OEEquivHash"
-BB_HASHSERVE ??= "auto"
