meta-digi: use INIT_MANAGER to configure init system manager
This variable introduced in Yocto 3.0 is the recommended way to configure
the init manager.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -57,3 +57,6 @@ SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 
 # Some packages need this (e.g. gstreamer1.0-plugins-ugly)
 LICENSE_FLAGS_ACCEPTED += "commercial"
+
+# Use systemd init manager by default
+INIT_MANAGER ?= "systemd"
